# Movie-App-cicd

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: linter-and-docker-ci.yml
commands/: argo_commands.txt  k8s_commands.txt
kubernetes/: argo.yaml  configmap.yaml  db-service.yaml  deployment.yaml  ingress.yaml  load-balancer.yaml  namespace.yaml  secret.yaml  service.yaml  statefulset.yaml
